# ml-ecolyzer

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
mlecolyzer/: __init__.py
mlecolyzer/cli/: __init__.py  main.py
mlecolyzer/core/: __init__.py  config.py  research.py  runner.py
mlecolyzer/datasets/: __init__.py  loader.py
mlecolyzer/metrics/: __init__.py  accuracy.py
mlecolyzer/models/: __init__.py  loader.py
mlecolyzer/monitoring/: __init__.py  environmental.py  hardware.py
mlecolyzer/utils/: __init__.py  helpers.py  parameters.py  validation.py  water_utilities.py
